crates/plotnik-tests/tests/02-parser/recovery_validation/named_def_missing_equals_with_garbage.txt
Q = Expr ^^^ (identifier)
------------------ DIAGNOSTICS -------------------
error: references must be parenthesized
 --> query.ptk:1:5
  |
1 | Q = Expr ^^^ (identifier)
  |     ^^^^
  |
help: wrap in parentheses
  |
1 - Q = Expr ^^^ (identifier)
1 + Q = (Expr) ^^^ (identifier)
  |

error: expected a pattern
 --> query.ptk:1:10
  |
1 | Q = Expr ^^^ (identifier)
  |          ^^^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
